search results can now be clicked to locate obj on board by shifting the board so the obj is in view. ISSUE: board moving out of bound due to this feature doesn't properly trigger checkBoundary() function, I'm suspecting the cause to be a delay, may use onload() to solve

--- a/panel.Board/boardStyle.css
+++ b/panel.Board/boardStyle.css
@@ -22,19 +22,23 @@
 #board{
   position: relative;
   border: 2px solid magenta;
+
   width:inherit;
   height:inherit;
+
+  left:0px;
+  top:0px;
 
   background-image:url("../pics/cork-board.png");
   background-repeat:repeat;
 }
 
 #boardContainer{
-  width: 2000px;
-  height: 2000px;
-
+  width:2000px;
+  height:2000px;
   overflow: hidden;
 }
+
 #boardView{
   position: absolute;
   left: 15px;
